Move pseudo-frame handling into CreateAnonymousFrames, sort of like what we have in ProcessChildren.  Bug 280708, r=bernd, sr=roc